<resources>
    <string name="app_name">Movie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Auzan Assidqi</string>
    <string name="nav_header_subtitle">auzanassidqi@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="upcoming">UPCOMING</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="home">Home</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vote_average">Rating</string>
    <string name="overview">Overview</string>
    <string name="title">Title</string>
    <string name="release_year">Release Date</string>
    <string name="search">Search</string>
    <string name="language">Language</string>
    <string name="movie_title">Movie Title</string>

    <string name="favorite">Favorite</string>
    <string name="no_data">No Data Right Now</string>
    <string name="appwidget_text">FAVORITE MOVIE</string>
    <string name="empty_text">NO DATA</string>
    <string name="add_widget">Add widget</string>

    <string name="key_reminder_upcoming">reminder_upcoming</string>
    <string name="daily_reminder_title">Daily Reminder Notification</string>
    <string name="daily_reminder_summary">Turn on/off daily reminder</string>
    <string name="upcoming_reminder_title">Upcoming Reminder Notification</string>
    <string name="upcoming_reminder_summary">Turn on/off upcoming reminder</string>
    <string name="notification">Notification</string>
    <string name="key_setting_locale">setting_locale</string>
    <string name="setting_locale_title">Setting Locale</string>
    <string name="setting_locale_summary">Change your phone localization</string>
    <string name="key_reminder_daily">reminder_daily</string>
    <string name="setting">Setting</string>
</resources>
