<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/notification">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_reminder_daily"
            android:title="@string/daily_reminder_title"
            android:summary="@string/daily_reminder_summary" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_reminder_upcoming"
            android:title="@string/upcoming_reminder_title"
            android:summary="@string/upcoming_reminder_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Language Setting">
        <Preference
            android:key="@string/key_setting_locale"
            android:title="@string/setting_locale_title"
            android:summary="@string/setting_locale_summary" />
    </PreferenceCategory>
</PreferenceScreen>