<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="300"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite_white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/setting"
        app:showAsAction="never"/>
</menu>